# SmartRetail-AI

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml  security.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  analytics.py  auth.py  cart.py  categories.py  health.py  orders.py  products.py  recommendations.py  reviews.py  users.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/middleware/: __init__.py  logging.py  rate_limit.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/tests/: conftest.py  test_health.py
docs/: API.md  DEPLOYMENT.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Analytics.tsx  Customers.tsx  Dashboard.tsx  Orders.tsx  ProductDetail.tsx  Products.tsx  Recommendations.tsx  Settings.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/stores/: authStore.ts
frontend/src/test/: App.test.tsx
k8s/: backend-deployment.yaml  configmap.yaml  database.yaml  frontend-deployment.yaml  ingress.yaml  ml-service-deployment.yaml  namespace.yaml
ml-service/: Dockerfile  pyproject.toml  requirements.txt
ml-service/app/: __init__.py  main.py
ml-service/app/api/v1/: router.py
ml-service/app/api/v1/endpoints/: forecasting.py  recommendations.py  segmentation.py  sentiment.py
ml-service/app/core/: __init__.py  config.py
ml-service/app/models/: __init__.py  customer_segmentation.py  demand_forecaster.py  recommendation_engine.py
ml-service/app/services/: model_manager.py
ml-service/tests/: __init__.py  test_models.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/datasources/: datasources.yaml
scripts/: init-db.sql
